--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <h1>Web Scrapper</h1>
-    <form action="javascript:void(0)" method="post">
-        <input type="text" name="url" id="url" value="https://jhamadhav.com/">
-        <button type="submit" onclick="get_data()">Done</button></form>
+
+    <input type="text" id="url" value="https://jhamadhav.com/">
+    <button type="submit" onclick="get_data()">Done</button>
 
     <div id="output"></div>
     <!-- script tag -->
