proper requests added

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
             <div id="title">Title comes here</div>
             <hr>
             <div id="description">Here goes description : Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.
+
             </div>
             <div id="url">Here comes the actual url</div>
         </div>
         <div class="img">
-            <img src="./images/empty.png" alt="preview image" id="image">
+            <img src="./images/dummy.png" alt="preview image" id="image">
         </div>
     </main>
     <section>
@@ -34,11 +34,11 @@
         <button id="search">Search</button>
     </section>
     <ul>
-        <li><a href="https://google.com">Google link</a></li>
-        <li><a href="https://jhamadhav.com/">Madhav jha</a></li>
-        <li><a href="https://jhamadhav.com/2048/">Game 2048</a></li>
-        <li><a href="https://jhamadhav.com/password-generator/">Password generator</a></li>
-        <li><a href="https://www.facebook.com/">fb link</a></li>
+        <li><a href="https://stackoverflow.com/">Stackoverflow link</a></li>
+        <li><a href="https://www.geeksforgeeks.org/">Geeks for geeks link</a></li>
+        <li><a href="https://jhamadhav.com/2048/">Game 2048 link</a></li>
+        <li><a href="https://www.freecodecamp.org">freecodecamp link</a></li>
+        <li><a href="https://glitch.com/">Glitch link</a></li>
     </ul>
 </body>
 
