--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,3 @@
-<!-- This is a static file -->
-<!-- served from your routes in server.js -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,9 +5,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="A cool thing made with Glitch" />
+    <meta property="og:title" content="Link Preview">
+    <meta name="description" content="Get link preview on hover !" />
+    <meta property="og:image" content="/images/dummy.png">
+    <meta property="og:url" content="https://link.jhamadhav.com/">
     <link rel="stylesheet" href="./main.css">
-    <title>Web scraper</title>
+    <title>Link preview | web-scraper</title>
 
     <script src="./main.js" defer></script>
 </head>
