--- a/public/index.html
+++ b/public/index.html
@@ -146,13 +146,142 @@
         </p>
     </div>
 
-    <ul>
-        <li><a href="https://stackoverflow.com/">Stackoverflow link</a></li>
-        <li><a href="https://www.geeksforgeeks.org/">Geeks for geeks link</a></li>
-        <li><a href="https://jhamadhav.com/2048/">Game 2048 link</a></li>
-        <li><a href="https://www.freecodecamp.org">freecodecamp link</a></li>
-        <li><a href="https://glitch.com/">Glitch link</a></li>
-    </ul>
+    <div class="tab">
+        <div class="heading">Few words :</div>
+        <p>
+            Thanks for reading till the end, I hope you enjoyed the explanation. Check my social handles and feel free
+            to mail me if you have any quires.
+            <br>
+            Keep Coding! keep Innovating!
+        </p>
+    </div>
+
+    <footer>
+        <img src="./images/msg.svg" alt="message sent">
+        <h2>Contact me !</h2>
+        <div class="msg">
+            <input type="text" id="mail_msg" placeholder="Type in your mail subject">
+            <button id="email_send" onclick="send_mail()">Send</button>
+        </div>
+
+        <div class="end-holder">
+
+            <div class="copyright">Copyright 2020 &copy; All rights reserved</div>
+            <div class="social-links">
+                <a href="https://github.com/jhamadhav/link-preview"><svg id="Bold" enable-background="new 0 0 24 24"
+                        height="512" viewBox="0 0 24 24" width="512" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="m12 .5c-6.63 0-12 5.28-12 11.792 0 5.211 3.438 9.63 8.205 11.188.6.111.82-.254.82-.567 0-.28-.01-1.022-.015-2.005-3.338.711-4.042-1.582-4.042-1.582-.546-1.361-1.335-1.725-1.335-1.725-1.087-.731.084-.716.084-.716 1.205.082 1.838 1.215 1.838 1.215 1.07 1.803 2.809 1.282 3.495.981.108-.763.417-1.282.76-1.577-2.665-.295-5.466-1.309-5.466-5.827 0-1.287.465-2.339 1.235-3.164-.135-.298-.54-1.497.105-3.121 0 0 1.005-.316 3.3 1.209.96-.262 1.98-.392 3-.398 1.02.006 2.04.136 3 .398 2.28-1.525 3.285-1.209 3.285-1.209.645 1.624.24 2.823.12 3.121.765.825 1.23 1.877 1.23 3.164 0 4.53-2.805 5.527-5.475 5.817.42.354.81 1.077.81 2.182 0 1.578-.015 2.846-.015 3.229 0 .309.21.678.825.56 4.801-1.548 8.236-5.97 8.236-11.173 0-6.512-5.373-11.792-12-11.792z" />
+                    </svg></a>
+                <a href="https://jhamadhav.com">
+                    <?xml version="1.0" encoding="iso-8859-1"?>
+                    <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                        style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M163.83,151H241V32.501C208.786,43.079,179.815,88.297,163.83,151z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path d="M163.83,361c15.985,62.703,44.956,107.921,77.17,118.499V361H163.83z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M497,181H15c-8.284,0-15,6.714-15,15v120c0,8.284,6.716,15,15,15h482c8.284,0,15-6.716,15-15V196
+                                C512,187.714,505.284,181,497,181z M479.418,232.709l-30,60C446.869,297.792,441.684,301,436,301
+                                c-5.684,0-10.869-3.208-13.418-8.291L406,259.545l-16.582,33.164c-5.098,10.166-21.738,10.166-26.836,0l-28.74-57.495
+                                c-1.729-2.122-2.714-4.788-3.034-7.634c-0.185,1.734-0.564,3.477-1.39,5.129l-30,60C296.869,297.792,291.684,301,286,301
+                                c-5.684,0-10.869-3.208-13.418-8.291L256,259.545l-16.582,33.164c-5.098,10.166-21.738,10.166-26.836,0l-30-60
+                                c-0.795-1.589-1.137-3.267-1.337-4.935c-0.377,3.232-1.597,6.178-3.571,8.421l-28.257,56.514C146.869,297.792,141.684,301,136,301
+                                s-10.869-3.208-13.418-8.291L106,259.545l-16.582,33.164C86.869,297.792,81.684,301,76,301s-10.869-3.208-13.418-8.291l-30-60
+                                c-3.706-7.412-0.703-16.421,6.709-20.127c7.397-3.662,16.392-0.718,20.127,6.709L76,252.455l16.582-33.164
+                                c5.307-10.649,21.288-11.097,26.836,0L136,252.455l16.582-33.164c2.695-5.391,8.364-8.32,14.385-8.262
+                                c7.753,0.509,13.916,6.903,14.242,14.509c0.179-5.321,2.985-10.408,8.082-12.957c7.427-3.662,16.406-0.718,20.127,6.709
+                                L226,252.455l16.582-33.164c5.098-10.166,21.738-10.166,26.836,0L286,252.455l16.582-33.164
+                                c3.706-7.427,12.715-10.371,20.127-6.709c5.054,2.527,7.839,7.549,8.064,12.819c0.291-7.535,5.649-13.808,13.351-14.313
+                                c6.182-0.146,12.598,2.813,15.294,8.203L376,252.455l16.582-33.164c5.098-10.166,21.738-10.166,26.836,0L436,252.455
+                                l16.582-33.164c3.721-7.427,12.7-10.371,20.127-6.709C480.121,216.288,483.124,225.297,479.418,232.709z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path d="M271,361v118.499c32.214-10.578,61.185-55.796,77.17-118.499H271z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path d="M271,32.501V151h77.17C332.185,88.297,303.214,43.079,271,32.501z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M133.019,361H24.544C65.545,451.022,156.334,512,256,512C201.814,512,154.477,452.326,133.019,361z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M378.981,361C357.523,452.326,310.186,512,256,512c99.666,0,190.455-60.978,231.456-151H378.981z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M24.544,151h108.475C154.477,59.674,201.814,0,256,0C156.334,0,65.545,60.978,24.544,151z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M256,0c54.186,0,101.523,59.674,122.981,151h108.475C446.455,60.978,355.666,0,256,0z" />
+                            </g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                    </svg>
+                </a>
+                <a href="https://www.linkedin.com/in/madhav-jha-7452511b2/"><svg height="512pt" viewBox="0 0 512 512"
+                        width="512pt" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="m475.074219 0h-438.148438c-20.394531 0-36.925781 16.53125-36.925781 36.925781v438.148438c0 20.394531 16.53125 36.925781 36.925781 36.925781h438.148438c20.394531 0 36.925781-16.53125 36.925781-36.925781v-438.148438c0-20.394531-16.53125-36.925781-36.925781-36.925781zm-293.464844 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0" />
+                    </svg></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
