--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
     <link rel="stylesheet" href="./styles/main.min.css">
     <title>Link preview | web-scraper</title>
     <!-- scripts -->
-    <script src="./nav.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="./scripts/swipe.js"></script>
+    <script src="./scripts/nav.js"></script>
+    <script src="./scripts/main.js"></script>
 </head>
 
 <body>
@@ -128,7 +129,7 @@
     </div>
 
     <div class="tab" id="extension">
-        <div class="heading">How to use it ?</div>
+        <div class="heading">How to use it ? (Extension)</div>
         <p>To test it out, Paste any link that you wish to see in the <a href="#main-h">search bar</a> above
             and <i>Voila</i> you
             have your preview.
