logo and firefiox extension link added

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,14 @@
             <span></span>
             <span></span>
         </div>
-        <div id="nav-h">Link Preview</div>
+
+        <div id="nav-h">
+            <div id="logo">
+                <img src="./images/logo.svg" alt="logo">
+            </div>
+            Link Preview
+        </div>
+
 
         <ul class="nav-links">
             <a href="#main-h">
@@ -135,8 +142,9 @@
             <br><br>
             Want to have it as a extension in your browser, follow along : <br>
         <ol>
-            <li>Visit the <a href="https://addons.mozilla.org/en-US/firefox/">Firefox addon</a> page or <a
-                    href="https://chrome.google.com/webstore/category/extensions">Chrome store</a> for chrome users.
+            <li>Visit the <a href="https://addons.mozilla.org/en-US/firefox/addon/web-link-preview/">Firefox addon</a>
+                page or <a href="https://chrome.google.com/webstore/category/extensions">Chrome store</a> for chrome
+                users.
             </li>
             <li>Search for link preview in the search bar.</li>
             <li>Found it ! Click on add it to your browser, give all the permission</li>
