--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Link Preview">
     <meta name="description" content="Get link preview on hover !" />
-    <meta property="og:image" content="/images/dummy.svg">
+    <meta property="og:image" content="/images/logo.svg">
     <meta property="og:url" content="https://link-viewer.heroku.com/">
+    <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&family=Rosario&display=swap"
         rel="stylesheet">
     <!-- style -->
